src/test/resources/failing/fail48.pnd
@type Animal
Foo(x, y) : Animal, string
Animal:byStr[y] = x new Animal <- Foo(x, y)